--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -25,11 +25,7 @@
   </div>
   <div class="field">
     <%= f.label :deadline %><br />
-    <%= f.date_select :deadline %>
-  </div>
-  <div class="field">
-    <%= f.label :project_id %><br />
-    <%= f.number_field :project_id %>
+    <%= f.date_select :deadline, :include_blank => true %>
   </div>
   <div class="actions">
     <%= f.submit %>
