--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,3 +11,16 @@
  *= require_self
  *= require_tree .
  */
+
+
+.container-narrow {
+  margin: 0 auto;
+  max-width: 700px;
+}
+
+.container-narrow .header {
+  text-align: center;
+}
+.container-narrow .header h2 {
+  font-weight: normal;
+ }
