--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -1,9 +1,29 @@
+html {
+  height:100%;
+}
 body {
-  background-color: #fff;
   color: #333;
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px;
+  padding-top: 60px;
+  padding-bottom: 30px;
+
+  background: #d8d5c1;
+  background: -moz-linear-gradient(top,  #d8d5c1 33%, #daba40 59%, #c56e0c 95%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(33%,#d8d5c1), color-stop(59%,#daba40), color-stop(95%,#c56e0c));
+  background: -webkit-linear-gradient(top,  #d8d5c1 33%,#daba40 59%,#c56e0c 95%);
+  background: -o-linear-gradient(top,  #d8d5c1 33%,#daba40 59%,#c56e0c 95%);
+  background: -ms-linear-gradient(top,  #d8d5c1 33%,#daba40 59%,#c56e0c 95%);
+  background: linear-gradient(to bottom,  #d8d5c1 33%,#daba40 59%,#c56e0c 95%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d8d5c1', endColorstr='#c56e0c',GradientType=0 );
+  background-color: #c56e0c;
+  background-repeat: no-repeat;
+}
+
+footer {
+  text-align: center;
+  color: white;
 }
 
 p, ol, ul, td {
