--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,35 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>Projectory</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
-<h1>SIMPLE TODO LISTS</h1>
-<h2>FROM RUBY GARAGE</h2>
-<%= yield %>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title><%= content_for?(:title) ? yield(:title) : "Projectory" %></title>
+    <%= csrf_meta_tags %>
+    <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
+    <!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
+    <![endif]-->
+    <%= stylesheet_link_tag "application", :media => "all" %>
+  </head>
+  <body>
+    <div class="container-narrow">
+      <div class="header">
+        <h1>SIMPLE TODO LISTS</h1>
+        <h2>FROM RUBY GARAGE</h2>
+      </div>
+      <%= yield %>           
+    </div><!--/content-->
+    <footer>
+      <p>&copy; Ruby Garage</p>
+    </footer>
 
-</body>
+    </div> <!-- /container -->
+
+    <!-- Javascripts
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <%= javascript_include_tag "application" %>
+
+  </body>
 </html>
