--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -27,3 +27,12 @@
 //
 // Example:
 // @linkColor: #ff0000;
+
+.thumbnails > li {
+  width: 100%;
+  margin-bottom: 40px;
+}
+.thumbnail{
+  background-color: #FFF;
+  text-align: left;
+ }
