--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,29 +1,36 @@
-<% @projects.each do |project| %>
-<div>
-  <div class="project_header">
-    <h3><%= link_to project.name, project %></h3> 
-    <%= link_to 'Edit', edit_project_path(project) %> 
-    <%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %>    
-  </div>
-  <div class="add_task_field">
-    <%= form_for :task, :url => tasks_path do |f| %>
-      <%= f.hidden_field :project_id, :value => project.id %>
-      <%= f.text_field :name, :placeholder => "Start typing here to create a task..." %>
-      <%= f.submit "Add Task" %>
-    <% end %>
-  </div>
-  <ul>
-    <% project.tasks.each do |task| %>
-    <li>
-      [<%= task.done ? "+" : "-" %>] <%= task.name %>
-    <%= link_to 'Edit', edit_task_path(task) %>
-    <%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %>
-    </li>
-    <% end %>
-  </ul>
-</div>
-<% end %>
-
-<br />
-
-<%= link_to 'Add TODO List', new_project_path %>
+  <% @projects.each do |project| %>
+      <h3 class=" project-header">
+        <i class="icon-list-alt"></i> <%= link_to project.name, project %>
+        <%= link_to raw('<i class="icon-remove"></i>'), project, method: :delete, data: { confirm: 'Are you sure?' }, :class => "pull-right" %>    
+        <%= link_to raw('<i class="icon-pencil"></i>'), edit_project_path(project), :class => "pull-right" %> 
+      </h3>
+      <div class="add-task-field">
+        <%= form_for :task, :url => tasks_path do |f| %>
+          <%= f.hidden_field :project_id, :value => project.id %>
+          <div class="input-prepend input-append">
+            <span class="add-on"><i class="icon-plus"></i></span>
+          <%= f.text_field :name, :placeholder => "Start typing here to create a task...", :class => "input-xxlarge" %>
+          <%= f.button "Add Task", :class => "btn btn-success" %>
+          </div>
+        <% end %>
+      </div>
+      <div class="tasks-list">
+        <table class="table table-hover">
+          <tbody>
+            <% project.tasks.each do |task| %>
+            <tr>
+              <td style="width: 5%"><i class="icon-<%= task.done ? "ok-sign" : "minus-sign" %>"></i></td>
+              <td style="width: 80%"><%= task.name %></td>
+              <td style="width: 15%">                 
+                <%= link_to raw('<i class="icon-arrow-down"></i>'), edit_task_path(task), :class => "icon-a" %>
+                <%= link_to raw('<i class="icon-arrow-up"></i>'), edit_task_path(task), :class => "icon-a" %>
+                <%= link_to raw('<i class="icon-edit"></i>'), edit_task_path(task), :class => "icon-a" %>
+                <%= link_to raw('<i class="icon-remove-circle"></i>'), task, method: :delete, data: { confirm: 'Are you sure?' }, :class => "icon-a" %>
+              </td>
+            </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
+  <% end %>
+<%= link_to raw('<i class="icon-plus icon-white"></i> Add TODO List'), new_project_path, :class => "btn btn-large btn-primary btn-block add-project" %>
