--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @project, :html => { :class => 'form-horizontal' } do |f| %>
+<%= form_for @project,:validate => true, :html => { :class => 'form-horizontal' } do |f| %>
   <div class="control-group <%= "error" unless @project.errors[:name].blank? %>">
     <%= f.label :name, :class => 'control-label' %>
     <div class="controls">
