--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -20,7 +20,7 @@
             <% project.tasks.each do |task| %>
             <tr>
               <td style="width: 5%"><i class="icon-<%= task.done ? "ok-sign" : "minus-sign" %>"></i></td>
-              <td style="width: 80%"><%= task.name %></td>
+              <td style="width: 80%" <%= task.done ? 'class=done-task' : "" %> ><%= task.name %></td>
               <td style="width: 15%">                 
                 <%= link_to raw('<i class="icon-arrow-down"></i>'), edit_task_path(task), :class => "icon-a" %>
                 <%= link_to raw('<i class="icon-arrow-up"></i>'), edit_task_path(task), :class => "icon-a" %>
