--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -19,7 +19,13 @@
           <tbody>
             <% project.tasks.each do |task| %>
             <tr>
-              <td style="width: 5%"><i class="icon-<%= task.done ? "ok-sign" : "minus-sign" %>"></i></td>
+              <td style="width: 5%">
+                <% if task.done %>
+                  <%= link_to raw('<i class="icon-ok-sign"></i>'), task_path(task, :task => { :done => false}), :method => :put, :class => "icon-a" %>
+                <% else %>
+                  <%= link_to raw('<i class="icon-minus-sign"></i>'), task_path(task, :task => { :done => true}), :method => :put, :class => "icon-a" %>
+                <% end %>
+              </td>
               <td style="width: 80%" <%= task.done ? 'class=done-task' : "" %> ><%= task.name %></td>
               <td style="width: 15%">                 
                 <%= link_to raw('<i class="icon-arrow-down"></i>'), edit_task_path(task), :class => "icon-a" %>
