--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -1,5 +1,7 @@
 @import "twitter/bootstrap/bootstrap";
-
+body {
+  background-color: #c56e0c;
+}
 @import "twitter/bootstrap/responsive";
 
 // Set the correct sprite paths
