--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -17,7 +17,7 @@
       <div class="tasks-list">
         <table class="table table-hover">
           <tbody>
-            <% project.tasks.each do |task| %>
+            <% project.tasks.sort_by(&:priority).each do |task| %>
             <tr>
               <td style="width: 5%">
                 <% if task.done %>
