--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,26 @@
         <h1>SIMPLE TODO LISTS</h1>
         <h2>FROM RUBY GARAGE</h2>
       </div>
+      <% unless flash[:notice].blank? %>
+        <div class="alert alert-info">
+           <button type="button" class="close" data-dismiss="alert">×</button>
+          <%= content_tag :div, flash[:notice] %>
+        </div>
+      <% end %>
+
+      <% unless flash[:error].blank? %>
+        <div class="alert alert-error">
+           <button type="button" class="close" data-dismiss="alert">×</button>
+          <%= content_tag :div, flash[:error] %>
+        </div>
+      <% end %>
+
+      <% unless flash[:alert].blank? %>
+        <div class="alert alert-warning">
+           <button type="button" class="close" data-dismiss="alert">×</button>
+          <%= content_tag :div, flash[:alert] %>
+        </div>
+      <% end %>
       <%= yield %>           
     </div><!--/content-->
     <footer>
