--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -17,7 +17,7 @@
       <div class="tasks-list">
         <table class="table table-hover">
           <tbody>
-            <% project.tasks.sort_by(&:priority).each do |task| %>
+            <% project.tasks.each do |task| %>
             <tr>
               <td style="width: 5%">
                 <% if task.done %>
@@ -28,8 +28,8 @@
               </td>
               <td style="width: 80%" <%= task.done ? 'class=done-task' : "" %> ><%= task.name %></td>
               <td style="width: 15%">                 
-                <%= link_to raw('<i class="icon-arrow-down"></i>'), edit_task_path(task), :class => "icon-a" %>
-                <%= link_to raw('<i class="icon-arrow-up"></i>'), edit_task_path(task), :class => "icon-a" %>
+                <%= link_to raw('<i class="icon-arrow-down"></i>'), down_task_path(task), :class => "icon-a" %>
+                <%= link_to raw('<i class="icon-arrow-up"></i>'), up_task_path(task), :class => "icon-a" %>
                 <%= link_to raw('<i class="icon-edit"></i>'), edit_task_path(task), :class => "icon-a" %>
                 <%= link_to raw('<i class="icon-remove-circle"></i>'), task, method: :delete, data: { confirm: 'Are you sure?' }, :class => "icon-a" %>
               </td>
