--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
   <body>
     <div class="container-narrow">
       <div class="header">
-        <h1>SIMPLE TODO LISTS</h1>
+        <h1><%= link_to "SIMPLE TODO LISTS", projects_path %></h1>
         <h2>FROM RUBY GARAGE</h2>
       </div>
       <% unless flash[:notice].blank? %>
