--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
         <h2>FROM RUBY GARAGE</h2>
       </div>
       <% unless flash[:notice].blank? %>
-        <div class="alert alert-info">
+        <div class="alert alert-success">
            <button type="button" class="close" data-dismiss="alert">×</button>
           <%= content_tag :div, flash[:notice] %>
         </div>
@@ -38,6 +38,15 @@
           <%= content_tag :div, flash[:alert] %>
         </div>
       <% end %>
+      <div class="well">
+        <% if current_user %>
+          Logged in as <%= current_user.email %>.
+          <%= link_to "Log Out", logout_path, :class => "btn btn-primary" %>
+        <% else %>
+          <%= link_to "Sign Up", signup_path, :class => "btn btn-primary" %> or
+          <%= link_to "Log In", login_path, :class => "btn btn-primary" %>
+        <% end %>
+      </div>
       <%= yield %>           
     </div><!--/content-->
     <footer>
