--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -39,4 +39,6 @@
         </table>
       </div>
   <% end %>
-<%= link_to raw('<i class="icon-plus icon-white"></i> Add TODO List'), new_project_path, :class => "btn btn-large btn-primary btn-block add-project" %>
+  <% if current_user %>
+    <%= link_to raw('<i class="icon-plus icon-white"></i> Add TODO List'), new_project_path, :class => "btn btn-large btn-primary btn-block add-project" %>
+  <% end %>
