--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,16 @@
       <div class="header">
         <h1><%= link_to "SIMPLE TODO LISTS", projects_path %></h1>
         <h2>FROM RUBY GARAGE</h2>
+        <p style="text-aligh: center">
+          <% if current_user %>
+            Logged in as <strong><%= current_user.name %></strong>.
+            <% if current_user.guest? %>
+              <%= link_to "Become a member", signup_path %>
+            <% else %>
+              <%= link_to "Log Out", logout_path %>
+            <% end %>
+          <% end %>
+        </p>
       </div>
       <% unless flash[:notice].blank? %>
         <div class="alert alert-success">
@@ -38,19 +48,10 @@
           <%= content_tag :div, flash[:alert] %>
         </div>
       <% end %>
-      <div class="well">
-        <% if current_user %>
-          Logged in as <%= current_user.email %>.
-          <%= link_to "Log Out", logout_path, :class => "btn btn-primary" %>
-        <% else %>
-          <%= link_to "Sign Up", signup_path, :class => "btn btn-primary" %> or
-          <%= link_to "Log In", login_path, :class => "btn btn-primary" %>
-        <% end %>
-      </div>
       <%= yield %>           
     </div><!--/content-->
     <footer>
-      <p>&copy; Ruby Garage</p>
+      <p>&copy; wazzzaby</p>
     </footer>
 
     </div> <!-- /container -->
